[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/FlyingChargingEnemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 51.0
height = 104.0

[sub_resource type="CapsuleShape2D" id=2]
resource_local_to_scene = true
radius = 60.0
height = 100.0

[sub_resource type="CapsuleShape2D" id=3]
resource_local_to_scene = true
radius = 70.0
height = 100.0

[node name="FlyingChargingEnemy" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="EnemyBody" parent="." index="0"]
collision_layer = 136
collision_mask = 65

[node name="CollisionShape2D" parent="EnemyBody" index="1"]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="EnemyBody/Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="BounceCheck" type="Area2D" parent="EnemyBody" index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody/BounceCheck" index="0"]
shape = SubResource( 3 )

[connection signal="area_entered" from="EnemyBody/BounceCheck" to="." method="_on_BounceCheck_entered"]
[connection signal="body_entered" from="EnemyBody/BounceCheck" to="." method="_on_BounceCheck_entered"]
